[tool.poetry]
name = "python-invertironline"
version = "0.1.0"
description = "A python wrapper for InvertirOnline.com API"
authors = ["Matias Varela <matu.varela@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
vcrpy = "^4.0.2"
pytest-sugar = "^0.9.3"
pytest-cov = "^2.8.1"
pytest-tldr = "^0.2.1"
pytest-xdist = "^1.32.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
